force-app/main/default/objects/ContactRelationship__c/ContactRelationship__c.object-meta.xml
<CustomObject>
    <description>Objekt zur Aufnahme der Beziehungen zwischen Kontakte und Kontakte</description>
    <label>EU-Kontaktbeziehung</label>
    <nameField>
        <displayFormat>KB-{000000000}</displayFormat>
        <label>Kontaktbeziehung-AutoNr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kontaktbeziehungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>