force-app/main/default/objects/ContactRelationship__c/fields/MainContact__c.field-meta.xml
<CustomField>
    <fullName>MainContact__c</fullName>
    <label>Hauptkontakt</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N20000000sEKVEA2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>