force-app/main/default/objects/ContactRelationship__c/fields/RelationshipToMainContact__c.field-meta.xml
<CustomField>
    <fullName>RelationshipToMainContact__c</fullName>
    <label>Beziehung zu Hauptkontakt</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sekretärin</fullName>
            </value>
            <value>
                <fullName>unterstellter Mitarbeiter</fullName>
            </value>
            <value>
                <fullName>ranggleicher Mitarbeiter</fullName>
            </value>
            <value>
                <fullName>fixer Assistent</fullName>
            </value>
            <value>
                <fullName>Stellvertreter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>