force-app/main/default/objects/ContactRelationship__c/fields/RelationshipToSubContact__c.field-meta.xml
<CustomField>
    <fullName>RelationshipToSubContact__c</fullName>
    <label>Beziehung zu Nebenkontakt</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stellvertreter</fullName>
            </value>
            <value>
                <fullName>Vorgesetzter</fullName>
            </value>
            <value>
                <fullName>fixer Assistent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>