force-app/main/default/objects/ContactRelationship__c/fields/SubContact__c.field-meta.xml
<CustomField>
    <fullName>SubContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nebenkontakt</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N20000000sEKaEAM</relationshipName>
    <type>Lookup</type>
</CustomField>